--- a/ai-study-material-gen/package.json
+++ b/ai-study-material-gen/package.json
@@ -18,13 +18,17 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.5",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
+    "embla-carousel-react": "^8.6.0",
     "inngest": "^3.34.0",
     "lucide-react": "^0.484.0",
+    "marked": "^15.0.7",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-card-flip": "^1.2.3",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.2",
     "tailwind-merge": "^3.0.2",
