--- a/ai-study-material-gen/package.json
+++ b/ai-study-material-gen/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "vercel-build": "npm run build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -27,9 +28,9 @@
     "marked": "^15.0.7",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "react-card-flip": "^1.2.3",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
     "sonner": "^2.0.2",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
