--- a/ai-study-material-gen/package.json
+++ b/ai-study-material-gen/package.json
@@ -26,7 +26,7 @@
     "inngest": "^3.34.0",
     "lucide-react": "^0.484.0",
     "marked": "^15.0.7",
-    "next": "15.2.4",
+    "next": "^15.3.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.3",
